docs: Project Report and Project Notebooks updated

--- a/1_Customer_Segmentation_Report.ipynb
+++ b/1_Customer_Segmentation_Report.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -159,6 +159,212 @@
    ],
    "source": [
     "customers.info()#Demographics data for customers of a mail-order company"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      LNR  AGER_TYP  AKT_DAT_KL  ALTER_HH  ALTER_KIND1  ALTER_KIND2  \\\n",
+      "0    9626         2         1.0      10.0          NaN          NaN   \n",
+      "1    9628        -1         9.0      11.0          NaN          NaN   \n",
+      "2  143872        -1         1.0       6.0          NaN          NaN   \n",
+      "3  143873         1         1.0       8.0          NaN          NaN   \n",
+      "4  143874        -1         1.0      20.0          NaN          NaN   \n",
+      "\n",
+      "   ALTER_KIND3  ALTER_KIND4  ALTERSKATEGORIE_FEIN  ANZ_HAUSHALTE_AKTIV  \\\n",
+      "0          NaN          NaN                  10.0                  1.0   \n",
+      "1          NaN          NaN                   NaN                  NaN   \n",
+      "2          NaN          NaN                   0.0                  1.0   \n",
+      "3          NaN          NaN                   8.0                  0.0   \n",
+      "4          NaN          NaN                  14.0                  7.0   \n",
+      "\n",
+      "          ...           VK_ZG11  W_KEIT_KIND_HH  WOHNDAUER_2008  WOHNLAGE  \\\n",
+      "0         ...               2.0             6.0             9.0       7.0   \n",
+      "1         ...               3.0             0.0             9.0       NaN   \n",
+      "2         ...              11.0             6.0             9.0       2.0   \n",
+      "3         ...               2.0             NaN             9.0       7.0   \n",
+      "4         ...               4.0             2.0             9.0       3.0   \n",
+      "\n",
+      "   ZABEOTYP      PRODUCT_GROUP  CUSTOMER_GROUP ONLINE_PURCHASE ANREDE_KZ  \\\n",
+      "0         3  COSMETIC_AND_FOOD     MULTI_BUYER               0         1   \n",
+      "1         3               FOOD    SINGLE_BUYER               0         1   \n",
+      "2         3  COSMETIC_AND_FOOD     MULTI_BUYER               0         2   \n",
+      "3         1           COSMETIC     MULTI_BUYER               0         1   \n",
+      "4         1               FOOD     MULTI_BUYER               0         1   \n",
+      "\n",
+      "  ALTERSKATEGORIE_GROB  \n",
+      "0                    4  \n",
+      "1                    4  \n",
+      "2                    4  \n",
+      "3                    4  \n",
+      "4                    3  \n",
+      "\n",
+      "[5 rows x 369 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (customers.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                LNR       AGER_TYP     AKT_DAT_KL       ALTER_HH  \\\n",
+      "count  8.912210e+05  891221.000000  817722.000000  817722.000000   \n",
+      "mean   6.372630e+05      -0.358435       4.421928      10.864126   \n",
+      "std    2.572735e+05       1.198724       3.638805       7.639683   \n",
+      "min    1.916530e+05      -1.000000       1.000000       0.000000   \n",
+      "25%    4.144580e+05      -1.000000       1.000000       0.000000   \n",
+      "50%    6.372630e+05      -1.000000       3.000000      13.000000   \n",
+      "75%    8.600680e+05      -1.000000       9.000000      17.000000   \n",
+      "max    1.082873e+06       3.000000       9.000000      21.000000   \n",
+      "\n",
+      "        ALTER_KIND1   ALTER_KIND2  ALTER_KIND3  ALTER_KIND4  \\\n",
+      "count  81058.000000  29499.000000  6170.000000  1205.000000   \n",
+      "mean      11.745392     13.402658    14.476013    15.089627   \n",
+      "std        4.097660      3.243300     2.712427     2.452932   \n",
+      "min        2.000000      2.000000     4.000000     7.000000   \n",
+      "25%        8.000000     11.000000    13.000000    14.000000   \n",
+      "50%       12.000000     14.000000    15.000000    15.000000   \n",
+      "75%       15.000000     16.000000    17.000000    17.000000   \n",
+      "max       18.000000     18.000000    18.000000    18.000000   \n",
+      "\n",
+      "       ALTERSKATEGORIE_FEIN  ANZ_HAUSHALTE_AKTIV          ...           \\\n",
+      "count         628274.000000        798073.000000          ...            \n",
+      "mean              13.700717             8.287263          ...            \n",
+      "std                5.079849            15.628087          ...            \n",
+      "min                0.000000             0.000000          ...            \n",
+      "25%               11.000000             1.000000          ...            \n",
+      "50%               14.000000             4.000000          ...            \n",
+      "75%               17.000000             9.000000          ...            \n",
+      "max               25.000000           595.000000          ...            \n",
+      "\n",
+      "                 VHN       VK_DHT4A     VK_DISTANZ        VK_ZG11  \\\n",
+      "count  770025.000000  815304.000000  815304.000000  815304.000000   \n",
+      "mean        2.417322       6.001214       7.532130       5.945972   \n",
+      "std         1.166572       2.856091       3.247789       2.771464   \n",
+      "min         0.000000       1.000000       1.000000       1.000000   \n",
+      "25%         2.000000       3.000000       5.000000       4.000000   \n",
+      "50%         2.000000       6.000000       8.000000       6.000000   \n",
+      "75%         3.000000       9.000000      10.000000       8.000000   \n",
+      "max         4.000000      11.000000      13.000000      11.000000   \n",
+      "\n",
+      "       W_KEIT_KIND_HH  WOHNDAUER_2008       WOHNLAGE       ZABEOTYP  \\\n",
+      "count   783619.000000   817722.000000  798073.000000  891221.000000   \n",
+      "mean         3.933406        7.908791       4.052836       3.362438   \n",
+      "std          1.964701        1.923137       1.949539       1.352704   \n",
+      "min          0.000000        1.000000       0.000000       1.000000   \n",
+      "25%          2.000000        8.000000       3.000000       3.000000   \n",
+      "50%          4.000000        9.000000       3.000000       3.000000   \n",
+      "75%          6.000000        9.000000       5.000000       4.000000   \n",
+      "max          6.000000        9.000000       8.000000       6.000000   \n",
+      "\n",
+      "           ANREDE_KZ  ALTERSKATEGORIE_GROB  \n",
+      "count  891221.000000         891221.000000  \n",
+      "mean        1.522098              2.777398  \n",
+      "std         0.499512              1.068775  \n",
+      "min         1.000000              1.000000  \n",
+      "25%         1.000000              2.000000  \n",
+      "50%         2.000000              3.000000  \n",
+      "75%         2.000000              4.000000  \n",
+      "max         2.000000              9.000000  \n",
+      "\n",
+      "[8 rows x 360 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (azdias.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 LNR       AGER_TYP     AKT_DAT_KL       ALTER_HH  \\\n",
+      "count  191652.000000  191652.000000  145056.000000  145056.000000   \n",
+      "mean    95826.500000       0.344359       1.747525      11.352009   \n",
+      "std     55325.311233       1.391672       1.966334       6.275026   \n",
+      "min         1.000000      -1.000000       1.000000       0.000000   \n",
+      "25%     47913.750000      -1.000000       1.000000       8.000000   \n",
+      "50%     95826.500000       0.000000       1.000000      11.000000   \n",
+      "75%    143739.250000       2.000000       1.000000      16.000000   \n",
+      "max    191652.000000       3.000000       9.000000      21.000000   \n",
+      "\n",
+      "        ALTER_KIND1  ALTER_KIND2  ALTER_KIND3  ALTER_KIND4  \\\n",
+      "count  11766.000000  5100.000000  1275.000000   236.000000   \n",
+      "mean      12.337243    13.672353    14.647059    15.377119   \n",
+      "std        4.006050     3.243335     2.753787     2.307653   \n",
+      "min        2.000000     2.000000     5.000000     8.000000   \n",
+      "25%        9.000000    11.000000    13.000000    14.000000   \n",
+      "50%       13.000000    14.000000    15.000000    16.000000   \n",
+      "75%       16.000000    16.000000    17.000000    17.000000   \n",
+      "max       18.000000    18.000000    18.000000    18.000000   \n",
+      "\n",
+      "       ALTERSKATEGORIE_FEIN  ANZ_HAUSHALTE_AKTIV          ...           \\\n",
+      "count         139810.000000        141725.000000          ...            \n",
+      "mean              10.331579             4.965863          ...            \n",
+      "std                4.134828            14.309694          ...            \n",
+      "min                0.000000             0.000000          ...            \n",
+      "25%                9.000000             1.000000          ...            \n",
+      "50%               10.000000             1.000000          ...            \n",
+      "75%               13.000000             4.000000          ...            \n",
+      "max               25.000000           523.000000          ...            \n",
+      "\n",
+      "            VK_DHT4A     VK_DISTANZ        VK_ZG11  W_KEIT_KIND_HH  \\\n",
+      "count  143781.000000  143781.000000  143781.000000   137910.000000   \n",
+      "mean        4.374417       4.564769       3.168868        4.152716   \n",
+      "std         2.924355       2.887035       2.233516        1.974375   \n",
+      "min         1.000000       1.000000       1.000000        0.000000   \n",
+      "25%         2.000000       2.000000       1.000000        2.000000   \n",
+      "50%         4.000000       4.000000       3.000000        5.000000   \n",
+      "75%         7.000000       7.000000       4.000000        6.000000   \n",
+      "max        11.000000      13.000000      11.000000        6.000000   \n",
+      "\n",
+      "       WOHNDAUER_2008       WOHNLAGE       ZABEOTYP  ONLINE_PURCHASE  \\\n",
+      "count   145056.000000  141725.000000  191652.000000    191652.000000   \n",
+      "mean         8.646371       3.723133       2.576806         0.090247   \n",
+      "std          1.154001       2.095540       1.168486         0.286536   \n",
+      "min          1.000000       0.000000       1.000000         0.000000   \n",
+      "25%          9.000000       2.000000       1.000000         0.000000   \n",
+      "50%          9.000000       3.000000       3.000000         0.000000   \n",
+      "75%          9.000000       5.000000       3.000000         0.000000   \n",
+      "max          9.000000       8.000000       6.000000         1.000000   \n",
+      "\n",
+      "           ANREDE_KZ  ALTERSKATEGORIE_GROB  \n",
+      "count  191652.000000         191652.000000  \n",
+      "mean        1.376432              3.060907  \n",
+      "std         0.484492              1.086254  \n",
+      "min         1.000000              1.000000  \n",
+      "25%         1.000000              3.000000  \n",
+      "50%         1.000000              3.000000  \n",
+      "75%         2.000000              4.000000  \n",
+      "max         2.000000              9.000000  \n",
+      "\n",
+      "[8 rows x 361 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (customers.describe())"
    ]
   },
   {
@@ -5670,7 +5876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
