--- a/2_Supervised_Learning_Model.ipynb
+++ b/2_Supervised_Learning_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -65,42 +65,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(42962, 367)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                LNR      AGER_TYP    AKT_DAT_KL      ALTER_HH  ALTER_KIND1  \\\n",
+      "count  42962.000000  42962.000000  35993.000000  35993.000000  1988.000000   \n",
+      "mean   42803.120129      0.542922      1.525241     10.285556    12.606137   \n",
+      "std    24778.339984      1.412924      1.741500      6.082610     3.924976   \n",
+      "min        1.000000     -1.000000      1.000000      0.000000     2.000000   \n",
+      "25%    21284.250000     -1.000000      1.000000      8.000000     9.000000   \n",
+      "50%    42710.000000      1.000000      1.000000     10.000000    13.000000   \n",
+      "75%    64340.500000      2.000000      1.000000     15.000000    16.000000   \n",
+      "max    85795.000000      3.000000      9.000000     21.000000    18.000000   \n",
+      "\n",
+      "       ALTER_KIND2  ALTER_KIND3  ALTER_KIND4  ALTERSKATEGORIE_FEIN  \\\n",
+      "count   756.000000   174.000000    41.000000          34807.000000   \n",
+      "mean     13.783069    14.655172    14.195122              9.855058   \n",
+      "std       3.065817     2.615329     3.034959              4.373539   \n",
+      "min       5.000000     6.000000     6.000000              0.000000   \n",
+      "25%      12.000000    13.000000    13.000000              8.000000   \n",
+      "50%      14.000000    15.000000    15.000000             10.000000   \n",
+      "75%      16.000000    17.000000    17.000000             13.000000   \n",
+      "max      18.000000    18.000000    18.000000             25.000000   \n",
+      "\n",
+      "       ANZ_HAUSHALTE_AKTIV          ...               VK_DHT4A    VK_DISTANZ  \\\n",
+      "count         35185.000000          ...           35695.000000  35695.000000   \n",
+      "mean              6.706096          ...               4.318644      4.505953   \n",
+      "std              15.151790          ...               3.165199      3.289502   \n",
+      "min               0.000000          ...               1.000000      1.000000   \n",
+      "25%               1.000000          ...               1.000000      2.000000   \n",
+      "50%               2.000000          ...               3.000000      4.000000   \n",
+      "75%               7.000000          ...               7.000000      7.000000   \n",
+      "max             438.000000          ...              11.000000     13.000000   \n",
+      "\n",
+      "            VK_ZG11  W_KEIT_KIND_HH  WOHNDAUER_2008      WOHNLAGE  \\\n",
+      "count  35695.000000    33284.000000    35993.000000  35185.000000   \n",
+      "mean       3.116963        4.488403        8.729947      4.059685   \n",
+      "std        2.534331        1.889573        1.010545      2.046697   \n",
+      "min        1.000000        0.000000        1.000000      0.000000   \n",
+      "25%        1.000000        3.000000        9.000000      3.000000   \n",
+      "50%        2.000000        6.000000        9.000000      3.000000   \n",
+      "75%        4.000000        6.000000        9.000000      7.000000   \n",
+      "max       11.000000        6.000000        9.000000      8.000000   \n",
+      "\n",
+      "           ZABEOTYP      RESPONSE     ANREDE_KZ  ALTERSKATEGORIE_GROB  \n",
+      "count  42962.000000  42962.000000  42962.000000          42962.000000  \n",
+      "mean       2.804199      0.012383      1.595084              3.213910  \n",
+      "std        1.121585      0.110589      0.490881              1.067475  \n",
+      "min        1.000000      0.000000      1.000000              1.000000  \n",
+      "25%        3.000000      0.000000      1.000000              3.000000  \n",
+      "50%        3.000000      0.000000      2.000000              4.000000  \n",
+      "75%        3.000000      0.000000      2.000000              4.000000  \n",
+      "max        6.000000      1.000000      2.000000              9.000000  \n",
+      "\n",
+      "[8 rows x 361 columns]\n"
+     ]
     }
    ],
    "source": [
-    "mailout_train.shape"
+    "print (mailout_train.describe())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(42833, 366)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                LNR      AGER_TYP    AKT_DAT_KL      ALTER_HH  ALTER_KIND1  \\\n",
+      "count  42833.000000  42833.000000  35944.000000  35944.000000  2013.000000   \n",
+      "mean   42993.165620      0.537436      1.518890     10.239511    12.534029   \n",
+      "std    24755.599728      1.414777      1.737441      6.109680     3.996079   \n",
+      "min        2.000000     -1.000000      1.000000      0.000000     2.000000   \n",
+      "25%    21650.000000     -1.000000      1.000000      8.000000     9.000000   \n",
+      "50%    43054.000000      1.000000      1.000000     10.000000    13.000000   \n",
+      "75%    64352.000000      2.000000      1.000000     15.000000    16.000000   \n",
+      "max    85794.000000      3.000000      9.000000     21.000000    18.000000   \n",
+      "\n",
+      "       ALTER_KIND2  ALTER_KIND3  ALTER_KIND4  ALTERSKATEGORIE_FEIN  \\\n",
+      "count   762.000000   201.000000    39.000000          34715.000000   \n",
+      "mean     13.942257    14.442786    14.410256              9.822584   \n",
+      "std       3.142155     2.787106     2.279404              4.410937   \n",
+      "min       4.000000     6.000000     9.000000              0.000000   \n",
+      "25%      12.000000    13.000000    13.000000              8.000000   \n",
+      "50%      14.000000    15.000000    14.000000             10.000000   \n",
+      "75%      17.000000    17.000000    16.000000             13.000000   \n",
+      "max      18.000000    18.000000    18.000000             25.000000   \n",
+      "\n",
+      "       ANZ_HAUSHALTE_AKTIV          ...                    VHN      VK_DHT4A  \\\n",
+      "count         35206.000000          ...           34530.000000  35658.000000   \n",
+      "mean              6.749986          ...               2.372401      4.308682   \n",
+      "std              14.839779          ...               1.151531      3.169149   \n",
+      "min               0.000000          ...               0.000000      1.000000   \n",
+      "25%               1.000000          ...               2.000000      1.000000   \n",
+      "50%               2.000000          ...               2.000000      3.000000   \n",
+      "75%               7.000000          ...               3.000000      7.000000   \n",
+      "max             379.000000          ...               4.000000     11.000000   \n",
+      "\n",
+      "         VK_DISTANZ       VK_ZG11  W_KEIT_KIND_HH  WOHNDAUER_2008  \\\n",
+      "count  35658.000000  35658.000000    33214.000000    35944.000000   \n",
+      "mean       4.488474      3.090078        4.489282        8.727437   \n",
+      "std        3.274829      2.510134        1.886903        1.013702   \n",
+      "min        1.000000      1.000000        0.000000        1.000000   \n",
+      "25%        2.000000      1.000000        3.000000        9.000000   \n",
+      "50%        4.000000      2.000000        6.000000        9.000000   \n",
+      "75%        7.000000      4.000000        6.000000        9.000000   \n",
+      "max       13.000000     11.000000        6.000000        9.000000   \n",
+      "\n",
+      "           WOHNLAGE      ZABEOTYP     ANREDE_KZ  ALTERSKATEGORIE_GROB  \n",
+      "count  35206.000000  42833.000000  42833.000000          42833.000000  \n",
+      "mean       4.088280      2.800037      1.595475              3.220484  \n",
+      "std        2.053977      1.120624      0.490806              1.069753  \n",
+      "min        0.000000      1.000000      1.000000              1.000000  \n",
+      "25%        3.000000      3.000000      1.000000              3.000000  \n",
+      "50%        3.000000      3.000000      2.000000              4.000000  \n",
+      "75%        7.000000      3.000000      2.000000              4.000000  \n",
+      "max        8.000000      6.000000      2.000000              9.000000  \n",
+      "\n",
+      "[8 rows x 360 columns]\n"
+     ]
     }
    ],
    "source": [
-    "mailout_test.shape"
+    "print (mailout_test.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    LNR  AGER_TYP  AKT_DAT_KL  ALTER_HH  ALTER_KIND1  ALTER_KIND2  \\\n",
+      "0  1763         2         1.0       8.0          NaN          NaN   \n",
+      "1  1771         1         4.0      13.0          NaN          NaN   \n",
+      "2  1776         1         1.0       9.0          NaN          NaN   \n",
+      "3  1460         2         1.0       6.0          NaN          NaN   \n",
+      "4  1783         2         1.0       9.0          NaN          NaN   \n",
+      "\n",
+      "   ALTER_KIND3  ALTER_KIND4  ALTERSKATEGORIE_FEIN  ANZ_HAUSHALTE_AKTIV  \\\n",
+      "0          NaN          NaN                   8.0                 15.0   \n",
+      "1          NaN          NaN                  13.0                  1.0   \n",
+      "2          NaN          NaN                   7.0                  0.0   \n",
+      "3          NaN          NaN                   6.0                  4.0   \n",
+      "4          NaN          NaN                   9.0                 53.0   \n",
+      "\n",
+      "          ...           VK_DHT4A  VK_DISTANZ  VK_ZG11  W_KEIT_KIND_HH  \\\n",
+      "0         ...                5.0         2.0      1.0             6.0   \n",
+      "1         ...                1.0         2.0      1.0             4.0   \n",
+      "2         ...                6.0         4.0      2.0             NaN   \n",
+      "3         ...                8.0        11.0     11.0             6.0   \n",
+      "4         ...                2.0         2.0      1.0             6.0   \n",
+      "\n",
+      "   WOHNDAUER_2008  WOHNLAGE  ZABEOTYP RESPONSE ANREDE_KZ ALTERSKATEGORIE_GROB  \n",
+      "0             9.0       3.0         3        0         2                    4  \n",
+      "1             9.0       7.0         1        0         2                    3  \n",
+      "2             9.0       2.0         3        0         1                    4  \n",
+      "3             9.0       1.0         3        0         2                    4  \n",
+      "4             9.0       3.0         3        0         1                    3  \n",
+      "\n",
+      "[5 rows x 367 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (mailout_train.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    LNR  AGER_TYP  AKT_DAT_KL  ALTER_HH  ALTER_KIND1  ALTER_KIND2  \\\n",
+      "0  1754         2         1.0       7.0          NaN          NaN   \n",
+      "1  1770        -1         1.0       0.0          NaN          NaN   \n",
+      "2  1465         2         9.0      16.0          NaN          NaN   \n",
+      "3  1470        -1         7.0       0.0          NaN          NaN   \n",
+      "4  1478         1         1.0      21.0          NaN          NaN   \n",
+      "\n",
+      "   ALTER_KIND3  ALTER_KIND4  ALTERSKATEGORIE_FEIN  ANZ_HAUSHALTE_AKTIV  \\\n",
+      "0          NaN          NaN                   6.0                  2.0   \n",
+      "1          NaN          NaN                   0.0                 20.0   \n",
+      "2          NaN          NaN                  11.0                  2.0   \n",
+      "3          NaN          NaN                   0.0                  1.0   \n",
+      "4          NaN          NaN                  13.0                  1.0   \n",
+      "\n",
+      "          ...           VHN  VK_DHT4A  VK_DISTANZ  VK_ZG11  W_KEIT_KIND_HH  \\\n",
+      "0         ...           4.0       5.0         6.0      3.0             6.0   \n",
+      "1         ...           1.0       5.0         2.0      1.0             6.0   \n",
+      "2         ...           3.0       9.0         6.0      3.0             2.0   \n",
+      "3         ...           2.0       6.0         6.0      3.0             NaN   \n",
+      "4         ...           1.0       2.0         4.0      3.0             3.0   \n",
+      "\n",
+      "   WOHNDAUER_2008  WOHNLAGE ZABEOTYP ANREDE_KZ ALTERSKATEGORIE_GROB  \n",
+      "0             9.0       3.0        3         1                    4  \n",
+      "1             9.0       5.0        3         1                    4  \n",
+      "2             9.0       4.0        3         2                    4  \n",
+      "3             9.0       2.0        3         2                    4  \n",
+      "4             9.0       7.0        4         2                    4  \n",
+      "\n",
+      "[5 rows x 366 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (mailout_test.head())"
    ]
   },
   {
@@ -2946,13 +3130,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [],
@@ -3361,6 +3538,17 @@
     "`Linear Learner`          0.836    0.018     0.406    0.035\n",
     "`Logisitic Regression`    0.671    0.021     0.589    0.041 "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 3: Kaggle Competition\n",
+    "\n",
+    "Now that you've created a model to predict which individuals are most likely to respond to a mailout campaign, it's time to test that model in competition through Kaggle. If you click on the link [here](http://www.kaggle.com/t/21e6d45d4c574c7fa2d868f0e8c83140), you'll be taken to the competition page where, if you have a Kaggle account, you can enter. If you're one of the top performers, you may have the chance to be contacted by a hiring manager from Arvato or Bertelsmann for an interview!\n",
+    "\n",
+    "Your entry to the competition should be a CSV file with two columns. The first column should be a copy of \"LNR\", which acts as an ID number for each individual in the \"TEST\" partition. The second column, \"RESPONSE\", should be some measure of how likely each individual became a customer – this might not be a straightforward probability. As you should have found in Part 2, there is a large output class imbalance, where most individuals did not respond to the mailout. Thus, predicting individual classes and using accuracy does not seem to be an appropriate performance evaluation method. Instead, the competition will be using AUC to evaluate performance. The exact values of the \"RESPONSE\" column do not matter as much: only that the higher values try to capture as many of the actual customers as possible, early in the ROC curve sweep."
+   ]
   }
  ],
  "metadata": {
@@ -3379,7 +3567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
